@@ -1,7 +1,12 @@
+* fix file locking for solaris in master/slave setups. work in progress. -- tobi
+
 * EchoPingHttp: add the 'accept_redirects' option, suggested by 
   Kelly Shutt <kelly *websitesource.com> --niko
+
 * remove a leftover 'use HTTP::Request' from Smokeping::Master -- niko
+
 * document the LWP dependency of the Smokeping::Slave module -- niko
+
 * fix restart behaviour of clients in multiprocess mode. now we just send
   ourself a SIGHUP and let 'it' happen -- tobi
 
